--- a/Netflix-clone/Netflix-styles.css
+++ b/Netflix-clone/Netflix-styles.css
@@ -22,7 +22,6 @@ body {
     overflow: hidden;
 }
 
-
 /* Navigation */
 .nav {
     display: flex;
@@ -45,13 +44,38 @@ body {
     gap: 15px;
 }
 
+.lang-img{
+    position: absolute;
+    top: 2.7rem;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    padding-left: 0.6rem;
+    overflow: hidden;
+}
+
+/*svg[Attributes Style] {
+    width: 100%;
+    height: 100%;
+    fill: none;
+}*/
+
 .language-select {
     background: rgba(0, 0, 0, 0.7);
     color: white;
-    padding: 8px 20px;
+    padding-right: 30px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 31px;
     border: 1px solid #aaa;
     border-radius: 4px;
     font-size: 16px;
+    appearance: none;
+    background-image: url('data:image/svg+xml;utf8,<svg fill="%23ffffff" height="20" viewBox="0 0 24 24" width="20" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5z"/><path d="M0 0h24v24H0z" fill="none"/></svg>');
+            background-repeat: no-repeat;
+            background-position-x: 95%;
+            background-position-y: 60%;
+
 }
 
 .language-select option {
@@ -267,7 +291,7 @@ body {
     text-shadow: 0 0 1.5rem rgba(0, 0, 0, 0.5);
     margin-top: 10%;
     z-index: 999;
-    right: -3rem;
+    right: -1rem;
     transform: translateY(1px);
     bottom: 4rem;
     font-size: 6rem;
@@ -520,7 +544,6 @@ footer {
             max-height: 0;
             overflow: hidden;
             transition: max-height 0.3s ease-out;
-            font-size: 1.5rem;
 }
 
         /* CSS-only accordion functionality */
@@ -536,7 +559,6 @@ footer {
             max-height: 500px;
             padding: var(--spacing-lg);
 }
-
 @media (max-width: 768px) {
     .faq-question {
         font-size: 1.25rem;
@@ -547,4 +569,26 @@ footer {
     width: 100%;
     height: 90px;
     background: inherit;
+}
+
+@media (max-width: 768px) {
+  .trending-movie {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    overflow: auto;
+    margin-right: 150px;
+    margin-left: 150px;
+  }
+}
+
+.lang-img1{
+    position: absolute;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    padding-left: 0.6rem;
+    padding-top: 9px;
+    color: white;
+    overflow: hidden;
 }
