--- a/Netflix-clone/Netflix-styles.css
+++ b/Netflix-clone/Netflix-styles.css
@@ -22,6 +22,7 @@ body {
     overflow: hidden;
 }
 
+
 /* Navigation */
 .nav {
     display: flex;
@@ -134,11 +135,23 @@ body {
 .email-signup button {
     background: #e50914;
     color: white;
-    padding: 15px 30px;
+    padding: 12px 24px;
     border: none;
     border-radius: 4px;
-    font-size: 26px;
+    font-size: 24px;
     cursor: pointer;
+    gap: 8px;
+    display: inline-flex;
+    align-items: center;
+    justify-items: center;
+}
+
+.arrow {
+    font-size: 28px;
+    margin-left: 4px;
+    font-weight: 300;
+    transform: scaleX(0.8);
+    display: inline-block;
 }
 
 .container{
@@ -411,15 +424,26 @@ body {
 .email-signup2 button {
     background: #e50914;
     color: white;
-    padding: 15px 30px;
+    padding: 12px 24px;
     border: none;
     border-radius: 4px;
-    font-size: 26px;
+    font-size: 24px;
     cursor: pointer;
+    gap: 8px;
+    display: inline-flex;
+    align-items: center;
+    justify-items: center;
+}
+
+.arrow {
+    font-size: 28px;
+    margin-left: 4px;
+    font-weight: 300;
+    transform: scaleX(0.8);
+    display: inline-block;
 }
 
 /* FAQ section */
-
 .faq-section h2{
     font-size: 2rem;
     margin-bottom: 1.5rem;
@@ -559,6 +583,7 @@ footer {
             max-height: 500px;
             padding: var(--spacing-lg);
 }
+
 @media (max-width: 768px) {
     .faq-question {
         font-size: 1.25rem;
